split A/B testing on nginx

--- a/django/templates/p1.html
+++ b/django/templates/p1.html
@@ -6,6 +6,6 @@
     <title>p1</title>
 </head>
 <body>
-    <h1> hi from p1 ,  i am here ....</h1>
+    <h1> hi from p1 ,  i am here in django v1  ....</h1>
 </body>
 </html>
