--- a/djangoV2/templates/p2.html
+++ b/djangoV2/templates/p2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p2</title>
+    <title>p1</title>
 </head>
 <body>
-    <h1> hi from p2 ,  i am here ....</h1>
+    <h1> hi from p2 ,  i am here in V2 ....</h1>
 </body>
 </html>
